# Intewell-RTOS

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  LICENSE  README.md  ci_boards.json  tbox
arch/: CMakeLists.txt  asm_offsets_build.h
arch/aarch64/: CMakeLists.txt  arch.c  arch_run2user.c  arch_signal.c  arch_uaccess.c  asm-offsets  atomic.S  cache.S  cpu.c  cpu_bitops.S  crt1.S  early_mmu.c  esr.c  exception.c  exception_context.c  exception_fault.c  exception_internal.h  hvc.S  link.lds  object_verify.S  run2user.S  signal.S  smc.S  task_context.S  tls.c  uaccess.S  vdso.c  vector.S
arch/arm_common/: CMakeLists.txt  Kconfig  backtrace.c  context_cpu_state.c  generic_timer.c  ipi.c  kuser32_helper.S  mmu.c  ttosConfig.c
boards-iprj/: CMakeLists.txt  Kconfig
boards-iprj/configs/: qemu_aarch64_defconfig
boards-iprj/dtb/: qemu_aarch64.dtb  qemu_aarch64.dts
boards-iprj/yaml/: qemu_aarch64.yaml
components/: CMakeLists.txt  Kconfig
components/acpi/: CMakeLists.txt  Kconfig  acpi_dev.c  acpica_init.c  os_intewell.c
components/clock/: clock_ms_to_tick.c  clock_time_abs_to_timespec.c  clock_time_to_tick.c  clock_timespec_add.c  clock_timespec_add64.c  clock_timespec_subtract.c  clock_timespec_subtract64.c  clock_tm_to_timespec64.c  clockchip.c  clocksource.c  kernel_clock_getres.c  kernel_clock_gettime.c  kernel_clock_settime.c  kernel_gettimeofday.c  kernel_settimeofday.c  kernel_time.c  ttos_time.c
components/common/: bitops.c  mpscq.c  mpscq_test.c  printk.c  tiny_md5.c  utils.c
components/libelf/: CMakeLists.txt  Kconfig  binfmt.c  symtab_allsyms.c  symtab_findbyname.c  symtab_findbyvalue.c
components/libfdt/: CMakeLists.txt
components/log/: Kconfig  klog.c  klog_procfs.c
components/net/: CMakeLists.txt  Kconfig  net_init.c
components/shell/: CMakeLists.txt  Kconfig  README.md
components/syscall/: _llseek.c  _newselect.c  accept.c  accept4.c  access.c  arch_prctl.c  bind.c  brk.c  chdir.c  chmod.c  chown.c  chroot.c  clock_getres.c  clock_getres_time32.c  clock_getres_time64.c  clock_gettime.c  clock_gettime32.c  clock_gettime64.c  clock_nanosleep.c  clock_nanosleep_time32.c  clock_nanosleep_time64.c  clock_settime.c  clock_settime32.c  clock_settime64.c  clone.c  close.c  connect.c  dup.c  dup2.c  dup3.c  epoll_create.c  epoll_create1.c  epoll_ctl.c  epoll_pwait.c  epoll_wait.c  eventfd.c  eventfd2.c  execve.c  exit.c  exit_group.c  (+186 more)
components/time/: timer_clock.c
components/trace/: CMakeLists.txt  Kconfig  trace.c  trace_core.c
dependencies/: .gitignore  CMakeLists.txt  Kconfig
drivers/: CMakeLists.txt  Kconfig
drivers/bch/: CMakeLists.txt  Kconfig  bch.h  bchdev_driver.c  bchdev_register.c  bchdev_unregister.c  bchlib_cache.c  bchlib_read.c  bchlib_setup.c  bchlib_teardown.c  bchlib_write.c
drivers/clocksource/: CMakeLists.txt  Kconfig  arm_timer.c
drivers/cpu/: CMakeLists.txt  cpu.c
drivers/dm/: ascii.c  cdev.c  dev_t.c  kmsg.c  mem.c  null.c  tty.c  urandom.c  zero.c
drivers/dts/: CMakeLists.txt  Kconfig  base.c  dtb.S  fdt_dump.c  fdt_init.c  fdt_util.c  fdt_util.h  of.c
drivers/irqchip/: CMakeLists.txt  Kconfig  gicv2.c  gicv3.c  gicv3_its.c
drivers/pci/: CMakeLists.txt  Kconfig
drivers/pty/: CMakeLists.txt  Kconfig  ptmx.c  pty.c  pty.h
drivers/ramdisk/: ramdisk.c
drivers/serial/: Kconfig  earlycon_uart.c  pl011.c  uart_core.c
drivers/virtio/: CMakeLists.txt  Kconfig  virtio-blk.c  virtio-console.c  virtio-mmio.c  virtio-mmio.h  virtio-net.c  virtio-net.h  virtio-pci-legacy.c  virtio-pci-modern.c  virtio-pci.c  virtio-pci.h  virtio.c  virtio.h  virtio_bus.c  virtio_helper.h  virtio_ring.h  virtqueue.c  virtqueue.h
kernel/: CMakeLists.txt  Kconfig
kernel/completion/: CMakeLists.txt  test.c  ttosCreateCompletion.c  ttosReleaseCompletion.c  ttosWaitCompletion.c
kernel/event/: ttosCreateEvent.c  ttosDeleteEvent.c  ttosEventTest.c  ttosReceiveEvent.c  ttosSendEvent.c  ttos_deinit_event.c  ttos_init_event.c
kernel/hook/: ttosHook.c
kernel/init/: Kconfig  init.c  main.c
kernel/initialize/: ttosStartOS.c  ttos_init.c
kernel/kobject/: klist.c  kobject.c  sysfs.c  sysfs_vfs.c
kernel/memory/: Kconfig  malloc.c  malloc_procfs.c  mm.c  mmu.c  page.c  percpu.c
kernel/msgq/: ttosCreateMsgq.c  ttosDeleteMsgq.c  ttosGetMsgqClassInfo.c  ttosGetMsgqConunt.c  ttosGetMsgqId.c  ttosGetMsgqInfo.c  ttosGetMsgqName.c  ttosGetMsgqPendingCount.c  ttosMsgq.c  ttosReceiveMsgq.c  ttosSendMsgq.c
kernel/mutex/: rt_mutex.c
kernel/notifier/: notifier.c
kernel/pic/: ttos_pic.c  ttos_pic_irq.c  ttos_pic_irq_desc.c
kernel/process/: Kconfig  execve.c  fork.c  pid.c  process.c  process_filelist.c  process_group.c  process_mm.c  process_obj.c  tasklist_lock.c  tglock.c  tid.c  uaccess.c
kernel/secure/: CMakeLists.txt  Kconfig  firmware_check.c
kernel/sema/: ttosCreateSema.c  ttosDeleteSema.c  ttosGetSemaCount.c  ttosGetSemaID.c  ttosGetSemaList.c  ttosGetSemaName.c  ttosObtainSemaWithInterruptFlags.c  ttosReleaseSema.c  ttosResetSema.c
kernel/smp/: CMakeLists.txt  smp.c
kernel/spinlock/: queue_spinlock.c
kernel/systemV/: shm.c
kernel/task/: Kconfig  period_sched_group.c  ttosActiveTask.c  ttosClearTaskReady.c  ttosClearTaskWaiting.c  ttosCreateTask.c  ttosDeleteTask.c  ttosDequeueTaskq.c  ttosDisablePreempt.c  ttosEnablePreempt.c  ttosEnequeueTaskq.c  ttosExactWaitedPeriodTask.c  ttosExactWaitedTask.c  ttosExtractTaskq.c  ttosGetRuningTask.c  ttosGetTaskContext.c  ttosGetTaskCount.c  ttosGetTaskExecutedTicks.c  ttosGetTaskID.c  ttosGetTaskInfo.c  ttosGetTaskName.c  ttosGetTaskPriority.c  ttosGetTaskStackInfo.c  ttosGetTaskState.c  ttosGetTaskidIist.c  ttosInsertWaitedPeriodTask.c  ttosInsertWaitedTask.c  ttosPeriodExpireNotify.c  ttosPeriodPrioReadyQueue.c  ttosPeriodQueueModify.c  ttosPeriodWaitNotify.c  ttosReplenishTask.c  ttosResetTask.c  ttosResumeTask.c  ttosSchedule.c  ttosSetDelayTime.c  ttosSetTaskName.c  ttosSetTaskPriority.c  ttosSetTaskReady.c  ttosSleepTask.c  (+8 more)
kernel/tbsp/: tbsp.c  tbspClockNotify.c  tbspGlobalInt.c  tbspInitVint.c  ttosCpuLib.c  ttosVint.c
(+477 files in other folders)
